fix navbar login link visibility

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -49,6 +49,10 @@
   color: #616668;
   font-size: 14px;
 }
+.navbar-wagon-link-2 {
+  color: white;
+  font-size: 14px;
+}
 .navbar-wagon-link:hover {
   color: #da552f;
   text-decoration: none;
