--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -62,9 +62,6 @@
   background: rgba(255, 255, 255, 0.2)
 }
 
-.navbar-wagon-link {
-  color: white;
-}
 
 .info {
   height: 60%;
